change color for >120 to magenta since brown does not give good contrast for brwon roofs, https://github.com/osmlab/sf_building_height_import/issues/10#issuecomment-261780504

--- a/buildingheights.css
+++ b/buildingheights.css
@@ -67,7 +67,7 @@ area[height>36]
 
 area[height>120]
 {
-    fill-color: #A37237;
+    fill-color: #FF00FF;
     text:"height";
     font-size: 15;
     text-position: center;
